Define new color constants and implement it to the existing component stylesheets

--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -19,7 +19,7 @@
       position: absolute;
       top: 7px;
       left: -20px;
-      background: rgba($valhalla, .25);
+      background: $valhalla-a;
       width: 10px;
       height: 10px;
       border: transparent;
