--- a/src/components/button/__circle/button__circle.scss
+++ b/src/components/button/__circle/button__circle.scss
@@ -11,9 +11,9 @@ $buttonSize: 100%;
   box-sizing: border-box;
   box-shadow: $boxShadowAlternative;
   background-color: $white;
-  border: 1px solid rgba($valhalla, 0.25);
+  border: 1px solid $valhalla-a;
   border-radius: 50%;
-  color: rgba($valhalla, 0.5);
+  color: $valhalla-b;
   font-size: calcRelativeFontSize( 18 );
   font-weight: normal;
   cursor: pointer;
