--- a/src/components/input/__dropdown/input__dropdown.scss
+++ b/src/components/input/__dropdown/input__dropdown.scss
@@ -11,7 +11,7 @@ $optionButtonSize: 30px;
     top: 43px;
     width: inherit;
     background-color: $white;
-    border-color: rgba($valhalla, 0.5);
+    border-color: $valhalla-b;
     border-radius: 0 0 4px 4px;
     box-shadow: $boxShadowAlternative;
     padding: 7px 7px 7px 15px;
