--- a/src/components/type-sample/type-sample.scss
+++ b/src/components/type-sample/type-sample.scss
@@ -14,7 +14,7 @@
 
   &__associative-tag {
     font-weight: normal;
-    color: rgba($valhalla, .25);
+    color: $valhalla-a;
   }
 
   &__usage-instruction {
