--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -8,8 +8,11 @@ $valhalla-a: rgba($valhalla, .25);
 $perfume-a: rgba($perfume, .25);
 $portage-a: rgba($portage, .25);
 
+$valhalla-b: rgba($valhalla, .5);
 $perfume-b: rgba($perfume, .5);
 $portage-b: rgba($portage, .5);
+
+$valhalla-c: rgba($valhalla, .75);
 
 $silver-tree:    #6FCF97;
 $turquoise-blue: #66D2EA;
