--- a/src/components/card/__room-booking/card__room-booking.scss
+++ b/src/components/card/__room-booking/card__room-booking.scss
@@ -79,7 +79,7 @@
       width: 240px;
 
       & > .material-icons {
-        color: rgba($valhalla, .25)
+        color: $valhalla-a;
       }
     }
   }
@@ -105,7 +105,7 @@
         position: relative;
         bottom: 3px;
         width: 100%;
-        border-bottom: 1px dotted rgba($valhalla, .25);
+        border-bottom: 1px dotted $valhalla-a;
       }
     }
   }
