--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -148,7 +148,7 @@ $piquetHeaderButtonBarOps: 832px;
   &__ejectable-button-panel {
     display: flex;
     gap: 5vw;
-    background-color: rgba($whisper, .75);
+    background-color: $valhalla-c;
     height: 36px;
     box-shadow: inset 0px 10px 20px rgba($valhalla, 0.05);
   }
@@ -156,7 +156,7 @@ $piquetHeaderButtonBarOps: 832px;
   &__ejector {
     box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
     background-color: $white;
-    color: rgba($valhalla, .5);
+    color: $valhalla-b;
     height: 14px;
   }
 }
