Fixed incorrect variable name

--- a/src/components/button/__circle/button__circle.scss
+++ b/src/components/button/__circle/button__circle.scss
@@ -9,7 +9,7 @@ $buttonSize: 100%;
   height: $buttonSize;
   width: $buttonSize;
   box-sizing: border-box;
-  box-shadow: $boxShadowAlternative;
+  box-shadow: $boxShadowAlternate;
   background-color: $white;
   border: 1px solid $valhalla-a;
   border-radius: 50%;
