--- a/src/components/input/__dropdown/input__dropdown.scss
+++ b/src/components/input/__dropdown/input__dropdown.scss
@@ -13,7 +13,7 @@ $optionButtonSize: 30px;
     background-color: $white;
     border-color: $valhalla-b;
     border-radius: 0 0 4px 4px;
-    box-shadow: $boxShadowAlternative;
+    box-shadow: $boxShadowAlternate;
     padding: 7px 7px 7px 15px;
     visibility: hidden;
     z-index: 20;
