--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -65,7 +65,7 @@ $inputParametersPadding: 20px;
         left: -$sideWindowWidth;
         top: 140px;
         height: 1030px;
-        box-shadow: $boxShadowAlternative;
+        box-shadow: $boxShadowAlternate;
         padding-block: 0;
         padding-left: $inputParametersPadding;
         margin-right: 0;
