--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -29,7 +29,7 @@
 
   &_alternative {
     border-radius: 4px;
-    box-shadow: $boxShadowAlternative;
+    box-shadow: $boxShadowAlternate;
   }
 }
 
