--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -16,123 +16,11 @@ block header
       filters: true
     })
 
+
 block main
   include /components/pagination/pagination.pug
   include /components/card/__room-sample/card__room-sample.pug
   include /components/card/__filter/card__filter.pug
-
-  -
-    const samples = [
-      {
-        room: 888,
-        luxe: true,
-        price: 9990,
-        count: {
-          rate: 5,
-          reviews: 145,
-          pictures: 3
-        }
-      },
-      {
-        room: 840,
-        luxe: false,
-        price: 9990,
-        count: {
-          rate: 4,
-          reviews: 65
-        }
-      },
-      {
-        room: 980,
-        luxe: true,
-        price: 8500,
-        count: {
-          rate: 3,
-          reviews: 35
-        }
-      },
-      {
-        room: 856,
-        luxe: false,
-        price: 7300,
-        count: {
-          rate: 5,
-          reviews: 19
-        }
-      },
-      {
-        room: 740,
-        luxe: false,
-        price: 6000,
-        count: {
-          rate: 4,
-          reviews: 44
-        }
-      },
-      {
-        room: 982,
-        luxe: false,
-        price: 5800,
-        count: {
-          rate: 3,
-          reviews: 56
-        }
-      },
-      {
-        room: 678,
-        luxe: false,
-        price: 5500,
-        count: {
-          rate: 5,
-          reviews: 45
-        }
-      },
-      {
-        room: 450,
-        luxe: false,
-        price: 5300,
-        count: {
-          rate: 4,
-          reviews: 39
-        }
-      },
-      {
-        room: 350,
-        luxe: false,
-        price: 5000,
-        count: {
-          rate: 3,
-          reviews: 77
-        }
-      },
-      {
-        room: 666,
-        luxe: false,
-        price: 5000,
-        count: {
-          rate: 5,
-          reviews: 25
-        }
-      },
-      {
-        room: 444,
-        luxe: false,
-        price: 5000,
-        count: {
-          rate: 3,
-          reviews: 15
-        }
-      },
-      {
-        room: 352,
-        luxe: false,
-        price: 5000,
-        count: {
-          rate: 3,
-          reviews: 55
-        }
-      }
-    ]
 
   main.website__main.fullscreen-bottom-border
     .search-page
@@ -144,6 +32,7 @@ block main
         .search-page__filtered-items-title
           span.search-page__filtered-items-title_text Номера, которые мы для вас подобрали
         .search-page__filtered-items-grid
+          include ./website__search-samples.pug
           each sample in samples
             +cardRoomSample( sample )
         .search-page__filtered-items-pagination
