--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -49,4 +49,7 @@ $piquetMinimalZoom: 380px;
 }
 
 $boxShadowDefault: 0 0 25px rgba($black, .2);
-$boxShadowAlternate: 0 10px 20px rgba($valhalla, .05)
+$boxShadowAlternate: 0 10px 20px rgba($valhalla, .05);
+
+$titleGapStandard: 5px;
+$titleGapExtended: 16px;
