--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -11,7 +11,7 @@ $focused-color_border-n-icon: $valhalla-b;
   }
 
   &__title {
-    margin-bottom: 5px;
+    margin-bottom: $titleGapStandard;
   }
 
   &__container {
