Added new color variable. fixed a wrond color variable applications within pagination and date-picker hover rules

--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -43,7 +43,7 @@ $font-size: 12px;
   --adp-accent-color: #{$perfume};
   
   --adp-background-color: none;
-  --adp-background-color-hover: #{$valhalla-a};
+  --adp-background-color-hover: #{$perfume-z};
   --adp-background-color-in-range: #{$primary-gradient-a};
   --adp-background-color-selected-other-month: #{$primary-gradient-a};
   --adp-background-color-selected-other-month-focused: #{$primary-gradient-b};
