--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -6,7 +6,8 @@ $bgGrad_arrows: $secondary-gradient;
 
 $fontColor_default: $valhalla-b;
 $fontColor_nav: $valhalla-c;
-$bgColor_onHover: $valhalla-a;
+
+$bgColor_onHover: $perfume-z;
 
 $circleboxSize: 40px;
 
