--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -8,6 +8,7 @@ $valhalla-a: rgba($valhalla, .25);
 $valhalla-b: rgba($valhalla, .5);
 $valhalla-c: rgba($valhalla, .75);
 
+$perfume-z: rgba($perfume, .15);
 $perfume-a: rgba($perfume, .25);
 $perfume-b: rgba($perfume, .5);
 
